@@ -1,5 +1,5 @@
 Package: mta-utils-dev
-Version: 1.1
+Version: 1.2
 Release: 1
 Section: custom
 Priority: optional
